@@ -680,6 +680,8 @@ void    getdefaults(SWISH * sw, char *conffile, int *hasdir, int *hasindex, int 
         }
         
 
+
+
         if (strcasecmp(w0, "PropertyNames") == 0)
         {
             if (sl->n <= 1)
@@ -740,6 +742,57 @@ void    getdefaults(SWISH * sw, char *conffile, int *hasdir, int *hasindex, int 
                         progerr("%s - name '%s' is not a STRING type of Property", w0, sl->word[i] );
 
                     m->metaType &= ~META_IGNORE_CASE;
+                }
+            }
+
+            continue;
+        }
+
+       /* --- this is duplicating.. */
+
+        if (strcasecmp(w0, "PropertyNamesNoStripChars") == 0)
+        {
+            struct metaEntry *m;
+            
+            if (sl->n <= 1)
+                progerr("%s: requires at least one value", w0);
+
+            for (i = 1; i < sl->n; i++)
+            {
+                if ( !(m = getPropNameByName( &indexf->header, sl->word[i])) )
+                    addMetaEntry(&indexf->header, sl->word[i], META_PROP|META_STRING|META_IGNORE_CASE|META_NOSTRIP, 0);
+                else
+                {
+                    if ( !is_meta_string( m ) )
+                        progerr("%s - name '%s' is not a STRING type of Property", w0, sl->word[i] );
+
+                    m->metaType |= META_NOSTRIP;
+                }
+            }
+
+            continue;
+        }
+
+
+
+        if (strcasecmp(w0, "PropertyNamesStripChars") == 0)
+        {
+            struct metaEntry *m;
+            
+            if (sl->n <= 1)
+                progerr("%s: requires at least one value", w0);
+
+            for (i = 1; i < sl->n; i++)
+            {
+                if ( !(m = getPropNameByName( &indexf->header, sl->word[i])) )
+                    addMetaEntry(&indexf->header, sl->word[i], META_PROP|META_STRING|META_IGNORE_CASE, 0);
+                else
+                {
+
+                    if ( !is_meta_string( m ) )
+                        progerr("%s - name '%s' is not a STRING type of Property", w0, sl->word[i] );
+
+                    m->metaType &= ~META_NOSTRIP;
                 }
             }
 
